# my-contract

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  cargo-generate.toml  rustfmt.toml
.github/workflows/: Release.yml
schema/: my-contract.json  state.json
src/: contract.rs  error.rs
tests/: package.json
