[package]
name = "my-contract"
version = "0.1.0"
edition = "2021"
exclude = [
  # Those files are contract-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[env]
CARGO_MAKE_EXTEND_WORKSPACE_MAKEFILE = true

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
schema = ["cosmwasm-schema"]

[dependencies]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }
schemars = { version = "~0.8.11" }
serde = { version = "~1.0" }
thiserror = { version = "~1.0" }
cosmwasm-schema = { version = "~1.2.1", optional = true }

secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", tag = "v0.8.0", default-features = false, features = ["serialization", "storage", "utils"] }

cw-storage-plus = { version = "1.0.1", default-features = false, features = ["macro"] }


[[bin]]
name = "schema"
required-features = ["schema"]