[package]
name = "my-contract"
version = "0.1.0"
edition = "2021"
exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/contract \
    --mount type=volume,source="$(basename "$(pwd)")_cache",target=/contract/target \
    --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
    enigmampc/secret-contract-optimizer:1.0.10
"""

[dependencies.cosmwasm-std]
package = "secret-cosmwasm-std"
version = "1.1.10"
features = ["stargate"]

[dependencies.cosmwasm-storage]
package = "secret-cosmwasm-storage"
version = "1.1.10"

[dependencies.secret-toolkit]
version = "0.9"
default-features = false
features = [
    # "crypto",
    # "incubator",
    # "permit",
    "serialization",
    "snip20",
    "snip721",
    "storage",
    "utils",
    "viewing-key",
]

[dependencies]
thiserror = "1.0"
schemars = "0.8"
serde = "1.0"
serde_json = "1.0"
serde-json-wasm = "0.5"
jsonxf = "1.1"
cosmwasm-schema = "1.3"

# Other
# cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.10-secret", features = ["stargate"] }
# cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.10-secret" }
# cw-storage-plus = { version = "1", default-features = false, features = ["macro"] }

[dev-dependencies]

# [patch.crates-io]
# cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.10-secret" }

[[bin]]
name = "schema"
